--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
   },
   "dependencies": {
     "angular": "^1.4.7",
+    "bootstrap": "^3.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "jade": "~1.11.0",
+    "jquery": "^2.1.4",
     "mongoose": "^4.1.7",
     "morgan": "~1.6.1"
   }
