--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jade": "~1.11.0",
     "jquery": "^2.1.4",
     "mongoose": "^4.1.7",
-    "morgan": "~1.6.1"
+    "morgan": "~1.6.1",
+    "socket.io": "^1.3.7"
   }
 }
