--- a/package.json
+++ b/package.json
@@ -8,11 +8,18 @@
   "dependencies": {
     "angular": "^1.4.7",
     "bootstrap": "^3.3.5",
+    "bcrypt-nodejs": "0.0.3",
+    "body-parser": "~1.13.2",
+    "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
+    "ejs": "~2.3.3",
     "express": "~4.13.1",
+    "express-session": "^1.11.3",
     "jade": "~1.11.0",
     "jquery": "^2.1.4",
     "mongoose": "^4.1.7",
-    "morgan": "~1.6.1"
+    "morgan": "~1.6.1",
+    "passport": "^0.3.0",
+    "passport-local": "^1.0.0"
   }
 }
