--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   },
   "dependencies": {
     "angular": "^1.4.7",
-    "bootstrap": "^3.3.5",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "~1.13.2",
+    "bootstrap": "^3.3.5",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "ejs": "~2.3.3",
@@ -17,6 +17,7 @@
     "express-session": "^1.11.3",
     "jade": "~1.11.0",
     "jquery": "^2.1.4",
+    "jquery-ui-bundle": "^1.11.4",
     "mongoose": "^4.1.7",
     "morgan": "~1.6.1",
     "passport": "^0.3.0",
