--- a/package.json
+++ b/package.json
@@ -3,25 +3,16 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./app"
   },
   "dependencies": {
     "angular": "^1.4.7",
-    "bcrypt-nodejs": "0.0.3",
-    "body-parser": "~1.13.2",
     "bootstrap": "^3.3.5",
-    "cookie-parser": "~1.3.5",
-    "debug": "~2.2.0",
-    "ejs": "~2.3.3",
     "express": "~4.13.1",
-    "express-session": "^1.11.3",
     "jade": "~1.11.0",
     "jquery": "^2.1.4",
     "jquery-ui-bundle": "^1.11.4",
     "mongoose": "^4.1.7",
-    "morgan": "~1.6.1",
-    "passport": "^0.3.0",
-    "passport-local": "^1.0.0",
-    "socket.io": "^1.3.7"
+    "morgan": "~1.6.1"
   }
 }
