--- a/package.json
+++ b/package.json
@@ -7,19 +7,20 @@
   },
   "dependencies": {
     "angular": "^1.4.7",
+    "bcrypt-nodejs": "latest",
+    "body-parser": "~1.0.0",
     "bootstrap": "^3.3.5",
+    "cookie-parser": "~1.0.0",
     "express": "~4.13.1",
+    "express-session": "~1.0.0",
     "jade": "~1.11.0",
     "jquery": "^2.1.4",
     "jquery-ui-bundle": "^1.11.4",
+    "method-override": "~1.0.0",
     "mongoose": "^4.1.7",
     "morgan": "~1.6.1",
-    "passport" : "~0.1.17",
-    "passport-local" : "~0.1.6",
-    "bcrypt-nodejs" : "latest",
-    "body-parser": "~1.0.0",
-    "cookie-parser": "~1.0.0",
-    "method-override": "~1.0.0",
-    "express-session": "~1.0.0"
+    "passport": "~0.1.17",
+    "passport-local": "~0.1.6",
+    "socket.io": "^1.3.7"
   }
 }
