--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "morgan": "~1.6.1",
     "passport": "~0.1.17",
     "passport-local": "~0.1.6",
+    "connect-flash" : "~0.1.1",
     "socket.io": "^1.3.7"
   }
 }
