--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^3.3.5",
     "connect-flash": "~0.1.1",
     "cookie-parser": "~1.0.0",
+    "dropzone": "^4.2.0",
     "express": "~4.13.1",
     "express-session": "~1.0.0",
     "jade": "~1.11.0",
@@ -20,6 +21,7 @@
     "method-override": "~1.0.0",
     "mongoose": "^4.1.7",
     "morgan": "~1.6.1",
+    "multer": "^1.1.0",
     "passport": "~0.1.17",
     "passport-local": "~0.1.6",
     "socket.io": "^1.3.7"
