--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "angular": "^1.4.7",
+    "angular-route": "^1.4.8",
     "bcrypt-nodejs": "latest",
     "body-parser": "~1.0.0",
     "bootstrap": "^3.3.5",
