--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "multer": "^1.1.0",
     "passport": "~0.1.17",
     "passport-local": "~0.1.6",
+    "serve-favicon": "^2.3.0",
     "socket.io": "^1.3.7"
   }
 }
