--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   },
   "dependencies": {
     "angular": "^1.4.7",
+    "angular-animate": "^1.4.8",
     "angular-route": "^1.4.8",
+    "angular-ui-bootstrap": "^0.14.3",
     "bcrypt-nodejs": "latest",
     "body-parser": "~1.0.0",
     "bootstrap": "^3.3.5",
