--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   "dependencies": {
     "angular": "^1.4.7",
     "angular-animate": "^1.4.8",
-    "angular-route": "^1.4.8",
     "angular-ui-bootstrap": "^0.14.3",
+    "angular-ui-router": "^0.2.15",
     "bcrypt-nodejs": "latest",
     "body-parser": "~1.0.0",
     "bootstrap": "^3.3.5",
