--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "q": "^1.4.1",
     "serve-favicon": "^2.3.0",
     "socket.io": "^1.3.7"
+  },
+  "devDependencies": {
+    "coffeelint": "^1.14.2"
   }
 }
