--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
   },
   "dependencies": {
     "angular": "^1.4.7",
-    "angular-animate": "^1.5.0",
     "angular-ui-bootstrap": "^0.14.3",
     "angular-ui-router": "^0.2.15",
     "angular-ui-router-title": "0.0.4",
+    "angularjs-color-picker": "^1.0.1",
     "bcrypt-nodejs": "latest",
     "body-parser": "~1.0.0",
     "bootstrap": "^3.3.5",
