--- a/package.json
+++ b/package.json
@@ -7,16 +7,16 @@
   },
   "dependencies": {
     "angular": "^1.4.7",
-    "angular-ui-bootstrap": "^0.14.3",
+    "angular-ui-bootstrap": "^1.2.2",
     "angular-ui-router": "^0.2.15",
     "angular-ui-router-title": "0.0.4",
     "angularjs-color-picker": "^1.0.1",
     "bcrypt-nodejs": "latest",
-    "body-parser": "~1.0.0",
+    "body-parser": "^1.15.0",
     "bootstrap": "^3.3.5",
     "coffee-middleware": "^0.3.0",
     "coffee-script": "^1.10.0",
-    "cookie-parser": "~1.0.0",
+    "cookie-parser": "^1.4.1",
     "dropzone": "^4.2.0",
     "express": "~4.13.1",
     "express-session": "~1.0.0",
@@ -25,11 +25,11 @@
     "jquery-ui-bundle": "^1.11.4",
     "jquery-ui-touch-punch": "^0.2.3",
     "mongoose": "^4.1.7",
-    "morgan": "~1.6.1",
+    "morgan": "^1.7.0",
     "multer": "^1.1.0",
-    "passport": "~0.1.17",
+    "passport": "^0.3.2",
     "passport-local": "~0.1.6",
-    "q": "^1.4.1",
+    "q": "^2.0.3",
     "serve-favicon": "^2.3.0",
     "socket.io": "^1.3.7"
   },
