--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./server.js"
+    "start": "node ./server.js",
+    "dev": "gulp"
   },
   "dependencies": {
     "angular": "^1.4.7",
@@ -14,7 +15,6 @@
     "bcrypt-nodejs": "latest",
     "body-parser": "^1.15.0",
     "bootstrap": "^3.3.5",
-    "coffee-middleware": "^0.3.0",
     "coffee-script": "^1.10.0",
     "cookie-parser": "^1.4.1",
     "dropzone": "^4.2.0",
@@ -31,9 +31,19 @@
     "passport-local": "~0.1.6",
     "q": "^2.0.3",
     "serve-favicon": "^2.3.0",
-    "socket.io": "^1.3.7"
+    "socket.io": "^1.3.7",
+    "socket.io-client": "^1.4.5",
+    "tinycolor2": "^1.0.0"
   },
   "devDependencies": {
-    "coffeelint": "^1.14.2"
+    "coffeeify": "^2.0.1",
+    "coffeelint": "^1.14.2",
+    "del": "^2.2.0",
+    "gulp": "^3.9.1",
+    "gulp-browserify": "^0.5.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-nodemon": "^2.0.6",
+    "gulp-uglify": "^1.5.3",
+    "nodemon": "^1.9.1"
   }
 }
