--- a/package.json
+++ b/package.json
@@ -42,9 +42,11 @@
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-browserify": "^0.5.1",
+    "gulp-coffeelint": "^0.6.0",
     "gulp-concat": "^2.6.0",
     "gulp-csso": "^1.1.0",
     "gulp-nodemon": "^2.0.6",
+    "gulp-sass": "^2.2.0",
     "gulp-uglify": "^1.5.3",
     "nodemon": "^1.9.1"
   }
