--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "gulp-jade": "^1.1.0",
     "gulp-nodemon": "^2.0.6",
     "gulp-sass": "^2.2.0",
-    "gulp-uglify": "^1.5.3"
+    "gulp-uglify": "^1.5.3",
+    "path": "^0.12.7"
   }
 }
