--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "karma-firefox-launcher": "^0.1.7",
     "karma-ie-launcher": "^0.2.0",
     "karma-jasmine": "^0.3.7",
+    "karma-jasmine-html-reporter": "^0.2.0",
     "karma-phantomjs-launcher": "^1.0.0",
     "path": "^0.12.7",
     "phantomjs-prebuilt": "^2.1.4",
