--- a/package.json
+++ b/package.json
@@ -38,12 +38,12 @@
   },
   "devDependencies": {
     "angular-mocks": "^1.5.0",
+    "browserify": "^13.0.0",
     "coffeeify": "^2.0.1",
     "coffeelint": "^1.14.2",
     "del": "^2.2.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
-    "gulp-browserify": "^0.5.1",
     "gulp-coffeelint": "^0.6.0",
     "gulp-concat": "^2.6.0",
     "gulp-csso": "^1.1.0",
@@ -51,6 +51,7 @@
     "gulp-nodemon": "^2.0.6",
     "gulp-sass": "^2.2.0",
     "gulp-uglify": "^1.5.3",
+    "image-size": "^0.4.0",
     "jasmine": "^2.4.1",
     "jasmine-core": "^2.4.1",
     "karma": "^0.13.21",
@@ -64,6 +65,8 @@
     "karma-phantomjs-launcher": "^1.0.0",
     "path": "^0.12.7",
     "phantomjs-prebuilt": "^2.1.4",
-    "supertest": "^1.2.0"
+    "supertest": "^1.2.0",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0"
   }
 }
