--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "gulp release && node ./server.js",
-    "test": "karma start karma.conf.coffee",
+    "test": "gulp test",
     "dev": "gulp dev"
   },
   "dependencies": {
@@ -30,7 +30,6 @@
     "multer": "^1.1.0",
     "passport": "^0.3.2",
     "passport-local": "~0.1.6",
-    "q": "^2.0.3",
     "serve-favicon": "^2.3.0",
     "socket.io": "^1.3.7",
     "socket.io-client": "^1.4.5",
@@ -39,6 +38,7 @@
   "devDependencies": {
     "angular-mocks": "^1.5.0",
     "browserify": "^13.0.0",
+    "chai": "^3.5.0",
     "coffeeify": "^2.0.1",
     "coffeelint": "^1.14.2",
     "del": "^2.2.0",
@@ -48,6 +48,7 @@
     "gulp-concat": "^2.6.0",
     "gulp-csso": "^1.1.0",
     "gulp-jade": "^1.1.0",
+    "gulp-mocha": "^2.2.0",
     "gulp-nodemon": "^2.0.6",
     "gulp-sass": "^2.2.0",
     "gulp-uglify": "^1.5.3",
@@ -63,6 +64,7 @@
     "karma-jasmine": "^0.3.7",
     "karma-jasmine-html-reporter": "^0.2.0",
     "karma-phantomjs-launcher": "^1.0.0",
+    "mocha": "^2.4.5",
     "path": "^0.12.7",
     "phantomjs-prebuilt": "^2.1.4",
     "supertest": "^1.2.0",
