--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "dropzone": "^4.2.0",
     "express": "~4.13.1",
     "express-session": "~1.0.0",
-    "jade": "~1.11.0",
     "jquery": "^2.1.4",
     "jquery-ui-bundle": "^1.11.4",
     "jquery-ui-touch-punch": "^0.2.3",
@@ -30,6 +29,7 @@
     "multer": "^1.1.0",
     "passport": "^0.3.2",
     "passport-local": "~0.1.6",
+    "pug": "^0.1.0",
     "serve-favicon": "^2.3.0",
     "socket.io": "^1.3.7",
     "socket.io-client": "^1.4.5",
@@ -47,9 +47,9 @@
     "gulp-coffeelint": "^0.6.0",
     "gulp-concat": "^2.6.0",
     "gulp-csso": "^1.1.0",
-    "gulp-jade": "^1.1.0",
     "gulp-mocha": "^2.2.0",
     "gulp-nodemon": "^2.0.6",
+    "gulp-pug": "^1.2.0",
     "gulp-sass": "^2.2.0",
     "gulp-uglify": "^1.5.3",
     "image-size": "^0.4.0",
