--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dropzone": "^4.2.0",
     "express": "~4.13.1",
     "express-session": "~1.0.0",
+    "image-size": "^0.5.0",
     "jquery": "^2.1.4",
     "jquery-ui-bundle": "^1.11.4",
     "jquery-ui-touch-punch": "^0.2.3",
@@ -28,7 +29,7 @@
     "morgan": "^1.7.0",
     "multer": "^1.1.0",
     "passport": "^0.3.2",
-    "passport-local": "~0.1.6",
+    "passport-local": "^1.0.0",
     "pug": "^0.1.0",
     "serve-favicon": "^2.3.0",
     "socket.io": "^1.3.7",
@@ -52,7 +53,6 @@
     "gulp-pug": "^1.2.0",
     "gulp-sass": "^2.2.0",
     "gulp-uglify": "^1.5.3",
-    "image-size": "^0.4.0",
     "jasmine": "^2.4.1",
     "jasmine-core": "^2.4.1",
     "karma": "^0.13.21",
