--- a/package.json
+++ b/package.json
@@ -67,6 +67,8 @@
     "mocha": "^2.4.5",
     "path": "^0.12.7",
     "phantomjs-prebuilt": "^2.1.4",
+    "sinon": "^1.17.3",
+    "sinon-chai": "^2.8.0",
     "supertest": "^1.2.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
