--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "test": "gulp test",
     "dev": "gulp dev"
   },
+  "engines": {
+    "node": "6.0.0"
+  },
   "dependencies": {
     "angular": "^1.4.7",
     "angular-ui-bootstrap": "^1.2.2",
