--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "serve-favicon": "^2.3.0",
     "socket.io": "^1.3.7",
     "socket.io-client": "^1.4.5",
-    "tinycolor2": "^1.0.0",
+    "tinycolor2": "^1.0.0"
+  },
+  "devDependencies": {
     "angular-mocks": "^1.5.0",
     "browserify": "^13.0.0",
     "chai": "^3.5.0",
