--- a/package.json
+++ b/package.json
@@ -16,33 +16,15 @@
     "bcrypt-nodejs": "latest",
     "body-parser": "^1.15.0",
     "bootstrap": "^3.3.5",
+    "browserify": "^13.0.0",
     "coffee-script": "^1.10.0",
+    "coffeeify": "^2.0.1",
+    "coffeelint": "^1.14.2",
     "cookie-parser": "^1.4.1",
+    "del": "^2.2.0",
     "dropzone": "^4.2.0",
     "express": "~4.13.1",
     "express-session": "~1.0.0",
-    "image-size": "^0.5.0",
-    "jquery": "^2.1.4",
-    "jquery-ui-bundle": "^1.11.4",
-    "jquery-ui-touch-punch": "^0.2.3",
-    "mongoose": "^4.1.7",
-    "morgan": "^1.7.0",
-    "multer": "^1.1.0",
-    "passport": "^0.3.2",
-    "passport-local": "^1.0.0",
-    "pug": "^0.1.0",
-    "serve-favicon": "^2.3.0",
-    "socket.io": "^1.3.7",
-    "socket.io-client": "^1.4.5",
-    "tinycolor2": "^1.0.0"
-  },
-  "devDependencies": {
-    "angular-mocks": "^1.5.0",
-    "browserify": "^13.0.0",
-    "chai": "^3.5.0",
-    "coffeeify": "^2.0.1",
-    "coffeelint": "^1.14.2",
-    "del": "^2.2.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-coffeelint": "^0.6.0",
@@ -53,9 +35,30 @@
     "gulp-pug": "^1.2.0",
     "gulp-sass": "^2.2.0",
     "gulp-uglify": "^1.5.3",
+    "image-size": "^0.5.0",
+    "jquery": "^2.1.4",
+    "jquery-ui-bundle": "^1.11.4",
+    "jquery-ui-touch-punch": "^0.2.3",
+    "karma": "^0.13.21",
+    "mongoose": "^4.1.7",
+    "morgan": "^1.7.0",
+    "multer": "^1.1.0",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
+    "path": "^0.12.7",
+    "pug": "^0.1.0",
+    "serve-favicon": "^2.3.0",
+    "socket.io": "^1.3.7",
+    "socket.io-client": "^1.4.5",
+    "tinycolor2": "^1.0.0",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0"
+  },
+  "devDependencies": {
+    "angular-mocks": "^1.5.0",
+    "chai": "^3.5.0",
     "jasmine": "^2.4.1",
     "jasmine-core": "^2.4.1",
-    "karma": "^0.13.21",
     "karma-chrome-launcher": "^0.2.2",
     "karma-coffee-preprocessor": "^0.3.0",
     "karma-coverage": "^0.5.5",
@@ -65,12 +68,9 @@
     "karma-jasmine-html-reporter": "^0.2.0",
     "karma-phantomjs-launcher": "^1.0.0",
     "mocha": "^2.4.5",
-    "path": "^0.12.7",
     "phantomjs-prebuilt": "^2.1.4",
     "sinon": "^1.17.3",
     "sinon-chai": "^2.8.0",
-    "supertest": "^1.2.0",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0"
+    "supertest": "^1.2.0"
   }
 }
