--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "gulp-csso": "^1.1.0",
     "gulp-mocha": "^2.2.0",
     "gulp-nodemon": "^2.0.6",
-    "gulp-pug": "^1.2.0",
+    "gulp-pug": "^3.0.2",
     "gulp-sass": "^2.2.0",
     "gulp-uglify": "^1.5.3",
     "image-size": "^0.5.0",
@@ -46,7 +46,7 @@
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
-    "pug": "^0.1.0",
+    "pug": "^2.0.0-alpha7",
     "serve-favicon": "^2.3.0",
     "socket.io": "^1.3.7",
     "socket.io-client": "^1.4.5",
