added pacakge lock and fixed versions to old versions to get back to a working state

--- a/package.json
+++ b/package.json
@@ -8,69 +8,69 @@
     "dev": "gulp dev"
   },
   "dependencies": {
-    "angular": "^1.4.7",
-    "angular-ui-bootstrap": "^1.2.2",
-    "angular-ui-router": "^0.2.15",
+    "angular": "1.4.7",
+    "angular-ui-bootstrap": "1.2.2",
+    "angular-ui-router": "0.2.15",
     "angular-ui-router-title": "0.0.4",
-    "angularjs-color-picker": "^1.0.1",
+    "angularjs-color-picker": "1.0.1",
     "bcrypt-nodejs": "latest",
-    "body-parser": "^1.15.0",
-    "bootstrap": "^3.3.5",
-    "browserify": "^13.0.0",
-    "coffee-script": "^1.10.0",
-    "coffeeify": "^2.0.1",
-    "coffeelint": "^1.14.2",
-    "cookie-parser": "^1.4.1",
-    "del": "^2.2.0",
-    "dropzone": "^4.2.0",
-    "express": "~4.13.1",
-    "express-session": "~1.0.0",
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^3.1.0",
-    "gulp-coffeelint": "^0.6.0",
-    "gulp-concat": "^2.6.0",
-    "gulp-csso": "^1.1.0",
-    "gulp-mocha": "^2.2.0",
-    "gulp-nodemon": "^2.0.6",
-    "gulp-pug": "^3.0.2",
-    "gulp-sass": "^2.2.0",
-    "gulp-uglify": "^1.5.3",
-    "image-size": "^0.5.0",
-    "jquery": "^2.1.4",
-    "jquery-ui-bundle": "^1.11.4",
-    "jquery-ui-touch-punch": "^0.2.3",
-    "karma": "^0.13.21",
-    "mongoose": "^4.1.7",
-    "morgan": "^1.7.0",
-    "multer": "^1.1.0",
-    "passport": "^0.3.2",
-    "passport-local": "^1.0.0",
-    "path": "^0.12.7",
-    "pug": "^2.0.0-alpha7",
-    "serve-favicon": "^2.3.0",
-    "socket.io": "^1.3.7",
-    "socket.io-client": "^1.4.5",
-    "tinycolor2": "^1.0.0",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0"
+    "body-parser": "1.15.0",
+    "bootstrap": "3.3.5",
+    "browserify": "13.0.0",
+    "coffee-script": "1.10.0",
+    "coffeeify": "2.0.1",
+    "coffeelint": "1.14.2",
+    "cookie-parser": "1.4.1",
+    "del": "2.2.0",
+    "dropzone": "4.2.0",
+    "express": "4.13.1",
+    "express-session": "1.0.0",
+    "gulp": "3.9.1",
+    "gulp-autoprefixer": "3.1.0",
+    "gulp-coffeelint": "0.6.0",
+    "gulp-concat": "2.6.0",
+    "gulp-csso": "1.1.0",
+    "gulp-mocha": "2.2.0",
+    "gulp-nodemon": "2.0.6",
+    "gulp-pug": "3.0.2",
+    "gulp-sass": "3.1.0",
+    "gulp-uglify": "1.5.3",
+    "image-size": "0.5.0",
+    "jquery": "2.1.4",
+    "jquery-ui-bundle": "1.11.4",
+    "jquery-ui-touch-punch": "0.2.3",
+    "karma": "0.13.21",
+    "mongoose": "4.1.7",
+    "morgan": "1.7.0",
+    "multer": "1.1.0",
+    "passport": "0.3.2",
+    "passport-local": "1.0.0",
+    "path": "0.12.7",
+    "pug": "2.0.0-alpha7",
+    "serve-favicon": "2.3.0",
+    "socket.io": "1.3.7",
+    "socket.io-client": "1.4.5",
+    "tinycolor2": "1.0.0",
+    "vinyl-buffer": "1.0.0",
+    "vinyl-source-stream": "1.1.0"
   },
   "devDependencies": {
-    "angular-mocks": "^1.5.0",
-    "chai": "^3.5.0",
-    "jasmine": "^2.4.1",
-    "jasmine-core": "^2.4.1",
-    "karma-chrome-launcher": "^0.2.2",
-    "karma-coffee-preprocessor": "^0.3.0",
-    "karma-coverage": "^0.5.5",
-    "karma-firefox-launcher": "^0.1.7",
-    "karma-ie-launcher": "^0.2.0",
-    "karma-jasmine": "^0.3.7",
-    "karma-jasmine-html-reporter": "^0.2.0",
-    "karma-phantomjs-launcher": "^1.0.0",
-    "mocha": "^2.4.5",
-    "phantomjs-prebuilt": "^2.1.4",
-    "sinon": "^1.17.3",
-    "sinon-chai": "^2.8.0",
-    "supertest": "^1.2.0"
+    "angular-mocks": "1.5.0",
+    "chai": "3.5.0",
+    "jasmine": "2.4.1",
+    "jasmine-core": "2.4.1",
+    "karma-chrome-launcher": "0.2.2",
+    "karma-coffee-preprocessor": "0.3.0",
+    "karma-coverage": "0.5.5",
+    "karma-firefox-launcher": "0.1.7",
+    "karma-ie-launcher": "0.2.0",
+    "karma-jasmine": "0.3.7",
+    "karma-jasmine-html-reporter": "0.2.0",
+    "karma-phantomjs-launcher": "1.0.0",
+    "mocha": "2.4.5",
+    "phantomjs-prebuilt": "2.1.4",
+    "sinon": "1.17.3",
+    "sinon-chai": "2.8.0",
+    "supertest": "1.2.0"
   }
 }
